--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
-    "ownerNumber": ["622150996855@s.whatsapp.net","622150996855@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
-    "botName": "Haruka-Mdོ ",
-    "footer": "api.zeeoneofc.xyz",
+    "ownerNumber": ["62895606423692@s.whatsapp.net"],
+    "ownerName": "Dapa",
+    "instagram" : "https://instagram.com/dapa.9_",
+    "botName": "Haruka MD",
+    "footer": "s.id/dapamd",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
     "pathimg": "./Haruka.jpg",
